deps/v8/test/message/syntactic-tail-call-in-subclass.out
*%(basename)s:12: SyntaxError: Tail call expression is not allowed here
      return continue f() ;
             ^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
